--- a/Tedometer/Resources/FlipsideView.xib
+++ b/Tedometer/Resources/FlipsideView.xib
@@ -55,11 +55,11 @@
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
         </view>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="96" userLabel="Settings View" customClass="SettingsView">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="735"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="830"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="TED gateway address:" lineBreakMode="tailTruncation" minimumFontSize="10" id="46">
-                    <rect key="frame" x="21" y="92" width="221" height="22"/>
+                    <rect key="frame" x="19" y="92" width="221" height="22"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="calibratedRGB"/>
                     <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="17"/>
@@ -68,7 +68,16 @@
                     <size key="shadowOffset" width="0.0" height="0.0"/>
                 </label>
                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="Refresh interval: " lineBreakMode="tailTruncation" numberOfLines="2" minimumFontSize="10" id="54">
-                    <rect key="frame" x="21" y="369" width="73" height="38"/>
+                    <rect key="frame" x="19" y="437" width="73" height="38"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="calibratedRGB"/>
+                    <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="17"/>
+                    <color key="textColor" red="1" green="1" blue="1" alpha="0.84999999999999998" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                    <size key="shadowOffset" width="0.0" height="0.0"/>
+                </label>
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="Totals meter:" lineBreakMode="tailTruncation" numberOfLines="2" minimumFontSize="10" id="a6x-x5-3KX" userLabel="Totals-Meter Type Label">
+                    <rect key="frame" x="17" y="345" width="80" height="40"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="calibratedRGB"/>
                     <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="17"/>
@@ -77,7 +86,7 @@
                     <size key="shadowOffset" width="0.0" height="0.0"/>
                 </label>
                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="Auto-lock disabling while plugged in:" lineBreakMode="tailTruncation" numberOfLines="2" minimumFontSize="10" id="85">
-                    <rect key="frame" x="21" y="421" width="158" height="56"/>
+                    <rect key="frame" x="20" y="491" width="158" height="56"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="calibratedRGB"/>
                     <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="17"/>
@@ -86,7 +95,7 @@
                     <size key="shadowOffset" width="0.0" height="0.0"/>
                 </label>
                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="Apply correction for low/peak net values:" lineBreakMode="tailTruncation" numberOfLines="2" minimumFontSize="10" id="5Uw-hP-z05">
-                    <rect key="frame" x="21" y="481" width="175" height="56"/>
+                    <rect key="frame" x="20" y="551" width="175" height="56"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="calibratedRGB"/>
                     <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="17"/>
@@ -95,7 +104,7 @@
                     <size key="shadowOffset" width="0.0" height="0.0"/>
                 </label>
                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="2 seconds" textAlignment="right" lineBreakMode="tailTruncation" minimumFontSize="10" id="56">
-                    <rect key="frame" x="178" y="352" width="123" height="21"/>
+                    <rect key="frame" x="178" y="420" width="123" height="21"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="calibratedRGB"/>
                     <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="17"/>
@@ -104,7 +113,7 @@
                     <size key="shadowOffset" width="0.0" height="0.0"/>
                 </label>
                 <textField opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="192.168.x.x:80" minimumFontSize="12" clearButtonMode="whileEditing" id="47">
-                    <rect key="frame" x="21" y="121" width="280" height="31"/>
+                    <rect key="frame" x="20" y="121" width="281" height="31"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="17"/>
                     <textInputTraits key="textInputTraits" keyboardType="URL"/>
@@ -113,7 +122,7 @@
                     </connections>
                 </textField>
                 <slider opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="2" minValue="0.0" maxValue="10" id="53">
-                    <rect key="frame" x="111" y="374" width="192" height="29"/>
+                    <rect key="frame" x="111" y="442" width="192" height="29"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="calibratedRGB"/>
                     <color key="tintColor" red="0.32549020648002625" green="0.83921575546264648" blue="0.41176474094390869" alpha="1" colorSpace="deviceRGB"/>
@@ -122,12 +131,12 @@
                     </connections>
                 </slider>
                 <switch opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" id="84">
-                    <rect key="frame" x="222" y="433" width="51" height="31"/>
+                    <rect key="frame" x="251" y="504" width="51" height="31"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="calibratedRGB"/>
                 </switch>
                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="Tap and hold meter to adjust range." textAlignment="center" lineBreakMode="wordWrap" numberOfLines="3" minimumFontSize="10" id="87">
-                    <rect key="frame" x="77" y="584" width="168" height="48"/>
+                    <rect key="frame" x="78" y="657" width="168" height="48"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="calibratedRGB"/>
                     <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="17"/>
@@ -135,8 +144,17 @@
                     <nil key="highlightedColor"/>
                     <size key="shadowOffset" width="0.0" height="0.0"/>
                 </label>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="Corrects for bugs in LiveData.xml that occur when using multiple MTUs. (Experimental.) " lineBreakMode="wordWrap" numberOfLines="3" minimumFontSize="10" id="140">
-                    <rect key="frame" x="21" y="524" width="280" height="52"/>
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="Corrects for bugs in TED 5000 API that occur when using multiple MTUs. (Experimental.) " lineBreakMode="wordWrap" numberOfLines="3" minimumFontSize="10" id="140">
+                    <rect key="frame" x="19" y="596" width="280" height="40"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="calibratedRGB"/>
+                    <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="11"/>
+                    <color key="textColor" red="1" green="1" blue="1" alpha="0.84999999999999998" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                    <size key="shadowOffset" width="0.0" height="0.0"/>
+                </label>
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="Supported for TED Pro only." lineBreakMode="wordWrap" numberOfLines="3" minimumFontSize="10" id="DNr-gb-uhj">
+                    <rect key="frame" x="17" y="385" width="159" height="24"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="calibratedRGB"/>
                     <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="11"/>
@@ -145,7 +163,7 @@
                     <size key="shadowOffset" width="0.0" height="0.0"/>
                 </label>
                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="5" minimumFontSize="10" id="89">
-                    <rect key="frame" x="20" y="654" width="280" height="61"/>
+                    <rect key="frame" x="21" y="718" width="280" height="61"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <string key="text">For information about 
@@ -157,11 +175,11 @@ http://theenergydetective.com</string>
                     <size key="shadowOffset" width="0.0" height="0.0"/>
                 </label>
                 <switch opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="102" userLabel="Use SSL">
-                    <rect key="frame" x="222" y="271" width="51" height="31"/>
+                    <rect key="frame" x="250" y="272" width="51" height="31"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 </switch>
                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="Use SSL:" lineBreakMode="tailTruncation" minimumFontSize="10" id="103">
-                    <rect key="frame" x="21" y="274" width="73" height="21"/>
+                    <rect key="frame" x="19" y="274" width="73" height="21"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="calibratedRGB"/>
                     <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="17"/>
@@ -170,7 +188,7 @@ http://theenergydetective.com</string>
                     <size key="shadowOffset" width="0.0" height="0.0"/>
                 </label>
                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="Username:" lineBreakMode="tailTruncation" minimumFontSize="10" id="104">
-                    <rect key="frame" x="21" y="179" width="84" height="21"/>
+                    <rect key="frame" x="19" y="179" width="84" height="21"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="calibratedRGB"/>
                     <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="17"/>
@@ -188,7 +206,7 @@ http://theenergydetective.com</string>
                     </connections>
                 </textField>
                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="Password:" lineBreakMode="tailTruncation" minimumFontSize="10" id="106">
-                    <rect key="frame" x="21" y="218" width="84" height="21"/>
+                    <rect key="frame" x="19" y="218" width="84" height="21"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="calibratedRGB"/>
                     <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="17"/>
@@ -206,9 +224,19 @@ http://theenergydetective.com</string>
                     </connections>
                 </textField>
                 <switch opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="139">
-                    <rect key="frame" x="222" y="493" width="51" height="31"/>
+                    <rect key="frame" x="251" y="564" width="51" height="31"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 </switch>
+                <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" segmentControlStyle="plain" selectedSegmentIndex="0" id="nxg-a8-lpQ" userLabel="Totals-Meter Type">
+                    <rect key="frame" x="112" y="351" width="188" height="29"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <segments>
+                        <segment title="NET"/>
+                        <segment title="LOAD"/>
+                        <segment title="GEN"/>
+                    </segments>
+                    <color key="tintColor" red="1" green="1" blue="1" alpha="0.84999999999999998" colorSpace="calibratedRGB"/>
+                </segmentedControl>
             </subviews>
             <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
         </view>
