--- a/Tedometer/Resources/MeterView.xib
+++ b/Tedometer/Resources/MeterView.xib
@@ -23,7 +23,7 @@
                 <outlet property="lowValueUnit" destination="197" id="202"/>
                 <outlet property="meterLabel" destination="59" id="97"/>
                 <outlet property="meterTitle" destination="146" id="ofl-Lm-65Q"/>
-                <outlet property="modelLabel" destination="9eV-Pz-N5d" id="EdZ-aO-52k"/>
+                <outlet property="metricLabel" destination="9eV-Pz-N5d" id="nbs-DR-uEr"/>
                 <outlet property="navigationBar" destination="223" id="PMd-Ya-c7L"/>
                 <outlet property="parentDialView" destination="61" id="213"/>
                 <outlet property="peakLabel" destination="153" id="164"/>
@@ -37,6 +37,7 @@
                 <outlet property="totalLabel" destination="104" id="178"/>
                 <outlet property="totalValue" destination="107" id="179"/>
                 <outlet property="totalValueUnit" destination="200" id="203"/>
+                <outlet property="totalsTypeToggleButton" destination="xLa-Em-76J" id="mrf-XI-E0G"/>
                 <outlet property="view" destination="34" id="35"/>
                 <outlet property="warningIconButton" destination="187" id="188"/>
             </connections>
@@ -84,7 +85,7 @@
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </imageView>
                                         <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="TITLE" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="9" adjustsLetterSpacingToFitWidth="YES" id="146" userLabel="Meter Title">
-                                            <rect key="frame" x="74.5" y="159" width="170" height="43"/>
+                                            <rect key="frame" x="74.5" y="155" width="170" height="43"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                             <color key="backgroundColor" red="0.20000000300000001" green="0.20000000300000001" blue="0.20000000300000001" alpha="0.0" colorSpace="calibratedRGB"/>
                                             <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="14"/>
@@ -93,18 +94,17 @@
                                             <color key="shadowColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                             <size key="shadowOffset" width="0.0" height="0.0"/>
                                         </label>
-                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.75" contentMode="scaleToFill" text="MODEL" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="9" id="9eV-Pz-N5d" userLabel="TED Model">
-                                            <rect key="frame" x="52" y="78" width="215" height="43"/>
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.75" contentMode="scaleToFill" text="METRIC" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="9" id="9eV-Pz-N5d" userLabel="Metric Label">
+                                            <rect key="frame" x="108" y="77" width="100" height="43"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <color key="backgroundColor" red="0.20000000300000001" green="0.20000000300000001" blue="0.20000000300000001" alpha="0.0" colorSpace="calibratedRGB"/>
-                                            <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="9"/>
+                                            <fontDescription key="fontDescription" name="Helvetica-LightOblique" family="Helvetica" pointSize="9"/>
                                             <color key="textColor" red="0.20000000300000001" green="0.20000000300000001" blue="0.20000000300000001" alpha="0.85999999999999999" colorSpace="calibratedRGB"/>
                                             <color key="highlightedColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                            <color key="shadowColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                             <size key="shadowOffset" width="0.0" height="0.0"/>
                                         </label>
                                         <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="TED-O-Meter" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="10" id="59" userLabel="Meter Label">
-                                            <rect key="frame" x="52" y="177" width="215" height="47"/>
+                                            <rect key="frame" x="52" y="174" width="215" height="47"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <color key="backgroundColor" red="0.29803922770000002" green="0.29803922770000002" blue="0.29803922770000002" alpha="0.0" colorSpace="calibratedRGB"/>
                                             <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="24"/>
@@ -132,7 +132,16 @@
                                             <rect key="frame" x="150" y="215" width="20" height="20"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         </activityIndicatorView>
-                                        <button hidden="YES" opaque="NO" clearsContextBeforeDrawing="NO" alpha="0.71126759052276611" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="187" userLabel="Warning Icon Button">
+                                        <button hidden="YES" opaque="NO" alpha="0.74999999999999978" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="xLa-Em-76J" userLabel="Totals Type Toggle Button">
+                                            <rect key="frame" x="124" y="155" width="70" height="35"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <accessibility key="accessibilityConfiguration" label=""/>
+                                            <state key="normal" image="totals_net.png"/>
+                                            <connections>
+                                                <action selector="toggleTotalsMeterType" destination="-1" eventType="touchUpInside" id="74Q-pw-mVz"/>
+                                            </connections>
+                                        </button>
+                                        <button hidden="YES" opaque="NO" clearsContextBeforeDrawing="NO" alpha="0.69999999999999996" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="187" userLabel="Warning Icon Button">
                                             <rect key="frame" x="124" y="207" width="72" height="35"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <accessibility key="accessibilityConfiguration">
@@ -387,6 +396,7 @@ Phs: </string>
         <image name="meter_bg_metal_shadow.png" width="290" height="290"/>
         <image name="meter_bg_metal_shadow_thin.png" width="290" height="290"/>
         <image name="meter_glare.png" width="278" height="278"/>
+        <image name="totals_net.png" width="55" height="19"/>
         <image name="warning_icon_black.png" width="20" height="19"/>
     </resources>
 </document>
