--- a/Tedometer/Resources/MeterView.xib
+++ b/Tedometer/Resources/MeterView.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="5056" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6154.17" systemVersion="14A261i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
     <dependencies>
         <deployment version="768" defaultVersion="1792" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6153.11"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MeterViewController">
@@ -190,6 +190,7 @@ Phs: </string>
                                     </state>
                                     <connections>
                                         <action selector="stopDialEdit" destination="-1" eventType="touchUpInside" id="210"/>
+                                        <action selector="stopDialEditAndSaveSettings" destination="-1" eventType="touchUpInside" id="jJZ-AF-whz"/>
                                     </connections>
                                 </button>
                             </subviews>
@@ -365,7 +366,7 @@ Phs: </string>
                         <navigationItem id="224">
                             <nil key="title"/>
                             <segmentedControl key="titleView" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" id="225">
-                                <rect key="frame" x="8" y="8" width="304" height="29"/>
+                                <rect key="frame" x="8" y="7.5" width="304" height="29"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.28561111589999999" green="0.32333333330000003" blue="0.28561111589999999" alpha="0.0" colorSpace="deviceRGB"/>
                                 <segments>
